# airlakeflow

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
airlakeflow/: add_soda.py  cli.py  docker_cmd.py  init_cmd.py  new_etl.py  new_migration.py  validate_cmd.py
airlakeflow/skeleton/: .env.example  docker-compose.yaml  requirements.txt
airlakeflow/skeleton/dags/: setup_database.py
airlakeflow/templates/: migration_gold.sql.j2  pipeline.py.j2  transformation.py.j2
config/: airflow.cfg
dags/: setup_database.py
dags/crypto/: __init__.py  bronze.py  gold.py  pipeline.py  silver.py  soda_quality.py
dags/crypto/transformations/: __init__.py  bitcoin.py
dags/monitoring/: soda_persistence.py
dags/monitoring/templates/: relatorio_soda.html.j2
dags/sql/migrations/: V001__setup_bronze.sql  V002__setup_silver.sql  V003__setup_gold.sql  V006__soda_metricas_soda4_enrich.sql  V008__setup_silver_vendas.sql  V009__setup_gold_vendas.sql  V011__setup_silver_csgostats.sql
dags/vendas/: bronze.py  gold.py
dags/vendas/transformations/: vendas.py
demos/: README.md
demos/full-example/: .env.example  README.md  docker-compose.yaml  requirements.txt
demos/full-example/dags/: setup_database.py
demos/full-example/scripts/: 002_seed_soda_simulation.sql
demos/test-crypto/: .airlakeflow.yaml  .env.example  README.md
demos/test-features/: .airlakeflow.yaml  docker-compose.yaml
demos/test-project/: .env.example  README.md
demos/test-seeds/: .airlakeflow.yaml  README.md  requirements.txt
demos/teste-questionary/: .airlakeflow.yaml  Dockerfile
docs/: DESIGN_ALF_ADD.md  PLANO_FRAMEWORK_CLI.md  README.md
docs/translations/: README.pt-BR.md
scripts/: 002_seed_soda_simulation.sql  01-init-datawarehouse.sql
soda/: bitcoin_checks.yaml  configuration.yaml
soda/checks/: bitcoin_bronze.yaml  bitcoin_silver.yaml
soda/contracts/: bitcoin_bronze.yaml  bitcoin_silver.yaml  csgostats_bronze.yaml
src/airlakeflow/: add_soda.py  cli.py  config.py  data_tests.py  data_tests_cmd.py  docker_cmd.py  docs_cmd.py  doctor_cmd.py  init_cmd.py  local_cmd.py  migration_doctor.py  migration_gen.py  migration_runner.py  migration_validator.py  migrations_cmd.py  model_loader.py  new_contract_cmd.py  new_etl.py  new_layer_cmd.py  new_migration.py  new_model_cmd.py  seed_cmd.py  style.py  upgrade_cmd.py  validate_cmd.py
tests/: __init__.py  conftest.py  test_add_soda_cli.py  test_architectures.py  test_bronze.py  test_cli_add_alf_checks.py  test_cli_install.py  test_create_env.py  test_data_tests_cli.py  test_data_tests_cmd.py  test_discover_dags.py  test_docs_cli.py  test_init.py  test_list_etls.py  test_migration_doctor.py  test_migration_gen.py  test_migration_validator.py  test_migrations_cmd.py  test_new_etl.py  test_new_migration_cli.py  test_new_model.py  test_seed_cli.py  test_validate.py
(+126 files in other folders)
