[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airlakeflow"
version = "0.1.0"
description = "AirLakeFlow: framework (bronze/silver/gold) com Airflow, Soda e CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
alf = "airlakeflow.cli:main"
airlakeflow = "airlakeflow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["airlakeflow*"]

[tool.setuptools.package-data]
airlakeflow = ["templates/*.j2", "templates/**/*.j2", "skeleton/**"]
