[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airlakeflow"
version = "0.1.0"
description = "AirLakeFlow: framework (bronze/silver/gold) com Airflow, Soda e CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Tawan da Silva Ferreira" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "questionary>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/data-engineering"
Documentation = "https://github.com/your-username/data-engineering#readme"
Repository = "https://github.com/your-username/data-engineering"
Issues = "https://github.com/your-username/data-engineering/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.8.0",
    "black>=24.0.0",
]

[project.scripts]
alf = "airlakeflow.cli:main"
airlakeflow = "airlakeflow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["airlakeflow*"]

[tool.setuptools.package-data]
airlakeflow = ["templates/*.j2", "templates/**/*.j2", "skeleton/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.venv
  | demos
  | _build
  | skeleton
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
exclude = [".venv", "demos", "src/airlakeflow/skeleton"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (Black handles it)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["airlakeflow"]
